# rules_vue

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  index.bzl  internal_deps.bzl  package.json
examples/hello-world/: .gitignore  .gitignore copy  BUILD.bazel  WORKSPACE  package.json
vue/: BUILD.bazel  defs.bzl  repositories.bzl
vue/private/: BUILD.bazel  actions.bzl  launcher_template.sh  rules.bzl
