load("@rules_pkg//:pkg.bzl", "pkg_tar")
load(":version.bzl", "VERSION")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")

# This declares the release artifact users
pkg_tar(
    name = "rules_vue-" + VERSION,
    srcs = [
        "LICENSE",
        "README.md",
        "version.bzl",
        "//vue:package_content",
    ],
    extension = "tar.gz",
    # It is all source code, so make it read-only.
    mode = "0444",
    # Make it owned by root so it does not have the uid of the CI robot.
    owner = "0.0",
    strip_prefix = ".",
)

# how to publish
# bazel run npm_package.publish -- --access public

# how to build
# bazel build npm_package

# login to npm
# bazel run @nodejs//:npm_node_repositories who
# or
# npm login

pkg_npm(
    name = "npm_package",
    package_name = "@ubiquitoustech/rules_vue",
    srcs = [
        "BUILD",
        "LICENSE",
        "README.md",
        "index.bzl",
        "package.json",
        "version.bzl",
        "//vue:package_content",
    ],
    substitutions = {
        # this is used to replace the load statements for files in the package
        "@ubiquitous_tech_rules_vue//": "//@ubiquitoustech/rules_vue/",
        "@npm": "",
        "NPM_VERSION": VERSION,
    },
)
