load(
    "@ubiquitous_tech_rules_vue//vue:defs.bzl",
    "vue",
    "vue_dev",
)

# this uses the npm package
# load(
#     "@npm//@ubiquitoustech/rules_nextjs:index.bzl",
#     "nextjs",
#     "nextjs_dev",
# )

vue(
    name = "prod",
    srcs = glob([
        "public/**",
        "src/**",
    ]) + [
        ":babel.config.js",
        ":package.json",
        ":yarn.lock",
    ],
    deps = [
        "@npm//@vue/cli-plugin-babel",
        "@npm//@vue/cli-plugin-eslint",
        "@npm//@vue/cli-service",
        "@npm//@vue/compiler-sfc",
        "@npm//babel-eslint",
        "@npm//core-js",
        "@npm//eslint",
        "@npm//eslint-plugin-vue",
        "@npm//vue",
    ],
)

vue_dev(
    name = "dev",
    srcs = glob([
        "public/**",
        "src/**",
    ]) + [
        ":babel.config.js",
        ":package.json",
        ":yarn.lock",
    ],
    deps = [
        "@npm//@vue/cli-plugin-babel",
        "@npm//@vue/cli-plugin-eslint",
        "@npm//@vue/cli-service",
        "@npm//@vue/compiler-sfc",
        "@npm//babel-eslint",
        "@npm//core-js",
        "@npm//eslint",
        "@npm//eslint-plugin-vue",
        "@npm//vue",
    ],
)
